force-app/main/default/objects/ccrz__E_Subscription__c/ccrz__E_Subscription__c.object-meta.xml
<CustomObject>
    <description>This is a subscription, the record of purchased subscription</description>
    <label>CC Subscription</label>
    <nameField>
        <displayFormat>SB-{0000000000}</displayFormat>
        <label>CC Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>