force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__CurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CurrencyISOCode__c</fullName>
    <description>The B2B Commerce currency for this transaction.</description>
    <label>Currency ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>