force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__InstallmentCountRemaining__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentCountRemaining__c</fullName>
    <description>The number of installments left in this subscription.  0 indicates no more installments left.  Null indicates this is not an installment based subscription.</description>
    <label>Installment Count Remaining</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>