force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__InstallmentNextDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentNextDate__c</fullName>
    <description>The date the next time payment will be processed for this subscription</description>
    <label>Installment Next Date</label>
    <type>DateTime</type>
</CustomField>