force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__InstallmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentStatus__c</fullName>
    <description>Not currently used</description>
    <label>Installment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>