force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__LastRecurringFailure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LastRecurringFailure__c</fullName>
    <description>Indicates a message why the last recurring process for this subscription failed.</description>
    <label>Last Recurring Failure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>