force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__OrderCountRemaining__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderCountRemaining__c</fullName>
    <description>The number of orders left in this subscription.  0 indicates no more orders left.  Null indicates this is not an order based subscription.</description>
    <label>Order Count Remaining</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>