force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__OrderLastDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderLastDate__c</fullName>
    <description>The date of the last order for this subscription</description>
    <label>Order Last Date</label>
    <type>DateTime</type>
</CustomField>