force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderStatus__c</fullName>
    <description>Not currently used</description>
    <label>Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>