force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__ParentSubscription__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this subscription has a parent subscription, this will point to it</description>
    <label>Parent Subscription</label>
    <referenceTo>ccrz__E_Subscription__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>