force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__RecurringPrice__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RecurringPrice__c</fullName>
    <description>Individual unit price for the installment.</description>
    <label>Recurring Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>