force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__RecurringPriceSubAmt__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
    <description>Sub total for the recurring price.  This will be the amount used for installments.</description>
    <label>Recurring Price Sub Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>