force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>Used for modifiers to determine order in which they are processed.</description>
    <label>Sequence</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>