force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPTOrderCount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPTOrderCount__c</fullName>
    <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
    <label>SPT Order Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>