force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPTOrderFrequency__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPTOrderFrequency__c</fullName>
    <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
    <label>SPT Order Frequency</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>