force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPTOrderFrequencyUOM__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPTOrderFrequencyUOM__c</fullName>
    <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
    <label>SPT Order Frequency UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>