force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPTRecurringPricePercentage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPTRecurringPricePercentage__c</fullName>
    <description>Recurring Price Percentage Field from the original SubProdTerm</description>
    <label>SPT Recurring Price Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>