force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPTUpfrontPricePercentage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPTUpfrontPricePercentage__c</fullName>
    <description>Upfront Price Percentage Field from the original SubProdTerm</description>
    <label>SPT Upfront Price Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>