force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>The storefront to which this subscription belongs.</description>
    <label>Storefront</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>