force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriptionId__c</fullName>
    <description>The external id of the subscription.  Not functionally used by B2B Commerce but may be used when creating objects within B2B Commerce.</description>
    <externalId>true</externalId>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>