force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SubscriptionProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriptionProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product that this subscription is for.  When recurring orders are used this is the product that will be ordered.</description>
    <label>Subscription Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>