force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SubscriptionStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriptionStatus__c</fullName>
    <description>The status of the subscription</description>
    <label>Subscription Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>